--- a/css/styles.css
+++ b/css/styles.css
@@ -373,12 +373,49 @@ button:hover {
     min-width: 100%;
     margin-top: 10em;
     margin-bottom: 10em;
-    ;
     border-style: none;
     height: 0.1em;
     color: #F29580;
     background-color: #F29580;
     
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.collapsible:hover {
+    background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
+.img_grid {
+    display: flex; 
+    justify-content:space-around;
+}
+
+.app_img {
+    max-height: 25rem;
+    margin: 5px;
+
 }
 
 
