--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,12 @@ a::before {
     color: #F29580;
 }
 
+a {
+    color:#32598C;
+    text-decoration: none;
+    /*take away the underline*/
+}
+
 .nav_title {
     color: #F29580;
     margin: 0px 30px;
@@ -267,22 +273,10 @@ button:hover {
     width: 100%;
 }
 
-.about_column_1,
-.about_column_2 {
-    display: flex;
-    flex-direction: column;
-    margin: 1em;
-    flex-basis: auto;
-}
-
-
-.about_column_1 {
-    justify-content: center;
-}
-
 .pb {
-    max-width: 20em;
+    max-height: 20rem;
     border-radius: 10%;
+    margin: 1rem;;
     object-fit: scale-down;
 }
 
